--- a/style.css
+++ b/style.css
@@ -1,64 +1,97 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.gbg {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+  color: #ffffff;
 }
 
 body {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradientBG 15s ease infinite;
-    color: #ffffff;
-    text-align: center;
+  text-align: center;
 }
 
 @keyframes gradientBG {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
-}
-.heading{
-    font-size: 10vmin;
-    margin: 3vh;
- }
-.container{
-    height: 70vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
-.game{
-    height: 60vmin;
-    width: 60vmin;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5vmin;
+.heading {
+  font-size: 10vmin;
+  margin: 3vh;
 }
 
-.box{
-    height: 18vmin;
-    width: 18vmin;
-    border: none;
-    border-radius: 0.8rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
+.players {
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.btn{
-    padding: 0.8rem;
-    font-size: 1.2rem;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 1000% 1000%;
-    animation: gradientBG 15s ease infinite;
-    color: #ffffff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease, box-shadow 0.3s ease;
+.name {
+  font-size: 6vmin;
+  margin: 5vh;
+}
+
+input {
+  width: 40vw;
+  height: 5vh;
+  font-size: 3vmin;
+  border: none;
+  border-radius: 1vh;
+  padding-left: 20px;
+}
+input::placeholder {
+  color: lightgray;
+}
+
+.container {
+  height: 70vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.game {
+  height: 60vmin;
+  width: 60vmin;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5vmin;
+}
+
+.box {
+  height: 18vmin;
+  width: 18vmin;
+  border: none;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
+}
+
+.btn {
+  padding: 0.8rem;
+  font-size: 1.2rem;
+  background: transparent;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+  transition: transform 0.2s ease, box-shadow 0.3s ease;
 }
 
 .btn:hover {
@@ -70,51 +103,51 @@ body {
   transform: scale(0.95);
 }
 
-.msg-container p{
-    font-size: 6vmin;
-    margin: 3rem;
+.msg-container p {
+  font-size: 6vmin;
+  margin: 3rem;
 }
 
-.msg-container{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+.msg-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-.hide{
-    display: none;
+.hide {
+  display: none;
 }
 
 @media (max-width: 480px) {
-    .heading{
-        font-size: 13vmin;
-        margin-top: 8vh;
-    }
-    .container{
-        height: 60vh;
-    }
-    .game{
-        height: 60vmin;
-        width: 60vmin;
-    }
-    .box{
-        height: 18vmin;
-        width: 18vmin;
-    }
-    .btn{
-        font-size: 7vmin;
-    }
-    #reset-btn{
-        margin-top: 3vh;
-        margin-bottom: 10vh;
-    }
-    .msg-container p{
-        font-size: 5vmin;
-        margin: 3rem;
-    }
-    .msg-container{
-        height: 100vh;
-    }
+  .heading {
+    font-size: 13vmin;
+    margin-top: 8vh;
+  }
+  .container {
+    height: 60vh;
+  }
+  .game {
+    height: 60vmin;
+    width: 60vmin;
+  }
+  .box {
+    height: 18vmin;
+    width: 18vmin;
+  }
+  .btn {
+    font-size: 5vmin;
+  }
+  #reset-btn {
+    margin-top: 3vh;
+    margin-bottom: 10vh;
+  }
+  .msg-container p {
+    font-size: 5vmin;
+    margin: 3rem;
+  }
+  .msg-container {
+    height: 100vh;
+  }
 }
